--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script data-main="scripts/app" src="scripts/require.js"></script>
     <title>Vite App</title>
   </head>
   <body>
