--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/spotify_icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Spotify Comparison</title>
   </head>
   <body>
     <div id="app"></div>
